Fixed table text overflow issue

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -50,6 +50,7 @@
 
   .mdl-data-table {
     width: 100%;
+    white-space: normal;
   }
 
   .mdl-button--icon {
